# Cpp-Sem3-Lab2

./: .clang-format  CMakeLists.txt  brainhack.cpp  brainhack.h  brainhack.test.cpp  main.cpp  task.cpp  task.h
